Update README for Spark 4.0.1, Java 17, and remote deployment
- Update Spark version from 4.1 to 4.0.1
- Change Java requirement from 21 to 17 (Snowflake JDBC compatibility)
- Add download-jars.sh step to project setup
- Document Apache Sedona for geospatial operations
- Rewrite Remote Deployment section with step-by-step workflow:
  - Add --setup flag usage for creating venv on remote
  - Warn about not syncing macOS venv to Linux workers
  - Add Local Docker vs Remote Cluster comparison table
- Add troubleshooting for Java 21 Arrow errors, Sedona module errors
- Update project structure with jars/ directory